RICONOSCIMENTO HOST PARTITA IMPLEMENTATO